--- a/resources/machine_learning/NMTF/README.org
+++ b/resources/machine_learning/NMTF/README.org
@@ -1,27 +1,31 @@
-* Non-negative Matrix Tri-Factorisation
+* Non-negative Matrix Tri-Factorisation (NMTF)
 
 
-** Key references
+** Key references from an algorithmic perspective
 
-In the table below, we present some key reading for NMTF, approaching
-it from an algorithmic perspective (i.e., not considering key
-applications).
+|---------------------------------------------------------------------------------------+-------------------------------------------------------------------------+------------------------------------+------+----------------------------|
+| Title                                                                                 | Relevance                                                               | Group                              | Year | DOI                        |
+|---------------------------------------------------------------------------------------+-------------------------------------------------------------------------+------------------------------------+------+----------------------------|
+| Learning the parts of objects by non-negative matrix factorization                    | 1. Introduces multiplicative update rules 2. relates NMF, PCA and VQ    | Daniel D. Lee & H. Sebastian Seung | 1998 | [[http://doi.org/10.1038/44565][10.1038/44565]]              |
+| Metagenes and molecular pattern discovery using matrix factorization                  | 1. Introduces the hard-clustering procedure                             | Jill P. Mesirov                    | 2004 | [[https://doi.org/10.1073/pnas.0308531101][10.1073/pnas.0308531101]]    |
+| On the equivalence of NMF and spectral clustering                                     | 1. Relates NMF, spectral clustering and kernel K-means                  | C. Ding                            | 2005 | [[https://doi.org/10.1137/1.9781611972757.70][10.1137/1.9781611972757.70]] |
+| Orthogonal nonnegative matrix t-factorizations for clustering                         | 1. Introduces NMTF                                                      | C. Ding                            | 2008 | [[https://doi.org/10.1145/1150402.1150420][10.1145/1150402.1150420]]    |
+| Simultaneous Clustering of Multi-Type Relational Data via Symmetric NMTF              | 1. Introduces NMTF heterogeneous fusion                                 | C. Ding                            | 2011 | [[https://doi.org/10.1145/2063576.2063621][10.1145/2063576.2063621]]    |
+| Graph Regularized NMF for Data Representation                                         | 1. Introduces NMF homogeneous fusion via graph regularisation           | Thomas S. Huang                    | 2011 | [[https://doi.org/10.1109/TPAMI.2010.231][10.1109/TPAMI.2010.231]]     |
+| Neural Word Embedding as Implicit Matrix Factorization                                | 1. State-of-the-art word embedding = PPMI + factorisation               | Omer Levy & Yoav Goldberg          | 2014 | [[https://dl.acm.org/doi/10.5555/2969033.2969070][10.5555/2969033.2969070]]    |
+| Network Embedding as Matrix Factorization: Unifying DeepWalk, LINE, PTE, and node2vec | 1. State-of-the-art node embedding = random walk + PPMI + factorisation | Jie B Tang                         | 2017 | [[https://doi.org/10.1145/3159652.3159706][10.1145/3159652.3159706]]    |
+|---------------------------------------------------------------------------------------+-------------------------------------------------------------------------+------------------------------------+------+----------------------------|
 
-|--------------------------------------------------------------------------+----------------------------------------------------------------------+------------------------------------+------+----------------------------|
-| Title                                                                    | Relevance                                                            | Group                              | Year | DOI                        |
-|--------------------------------------------------------------------------+----------------------------------------------------------------------+------------------------------------+------+----------------------------|
-| Learning the parts of objects by non-negative matrix factorization       | 1. Introduces multiplicative update rules 2. relates NMF, PCA and VQ | Daniel D. Lee & H. Sebastian Seung | 1998 | [[http://doi.org/10.1038/44565][10.1038/44565]]              |
-| Metagenes and molecular pattern discovery using matrix factorization     | 1. Introduces the hard-clustering procedure                          | Jill P. Mesirov                    | 2004 | [[https://doi.org/10.1073/pnas.0308531101][10.1073/pnas.0308531101]]    |
-| On the equivalence of NMF and spectral clustering                        | 1. Relates NMF, spectral clustering and kernel K-means               | C. Ding                            | 2005 | [[https://doi.org/10.1137/1.9781611972757.70][10.1137/1.9781611972757.70]] |
-| Orthogonal nonnegative matrix t-factorizations for clustering            | 1. Introduces NMTF                                                   | C. Ding                            | 2008 | [[https://doi.org/10.1145/1150402.1150420][10.1145/1150402.1150420]]    |
-| Simultaneous Clustering of Multi-Type Relational Data via Symmetric NMTF | 1. Introduces NMTF heterogeneous fusion                              | C. Ding                            | 2011 | [[https://doi.org/10.1145/2063576.2063621][10.1145/2063576.2063621]]    |
-| Graph Regularized NMF for Data Representation                            | 1. Introduces NMF graph regularisation                               | Thomas S. Huang                    | 2011 | [[https://doi.org/10.1109/TPAMI.2010.231][10.1109/TPAMI.2010.231]]     |
-| Neural Word Embedding as Implicit Matrix Factorization                   | 1. State-of-the-art node embedding = PPMI + factorisation            | Omer Levy & Yoav Goldberg          | 2014 | [[https://dl.acm.org/doi/10.5555/2969033.2969070][10.5555/2969033.2969070]]    |
-|--------------------------------------------------------------------------+----------------------------------------------------------------------+------------------------------------+------+----------------------------|
+** Key references from an application's perspective
 
+|---------------------------------------------------------------------------------+-------------------------------------------------------------------------------------+-----------+------+------------------------|
+| Title                                                                           | Relevance                                                                           | Group     | Year | DOI                    |
+| Discovering disease-disease associations by fusing systems-level molecular data | 1. Initiated using NMTF-based methods for the fusion of heterogeneous of omics data | N. Pržulj | 2013 | [[https://doi.org/10.1038/srep03202][10.1038/srep03202]]      |
+| Methods for biological data integration: perspectives and challenges            | 1. Reviews data-fusion methods for omics data                                       | N. Pržulj | 2015 | [[http://dx.doi.org/10.1098/rsif.2015.0571][10.1098/rsif.2015.0571]] |
+| Integrative methods for analyzing big data in precision medicine                | 1. Reviews data-fusion methods in applied in precision medicine                     | N. Pržulj | 2016 | [[https://doi.org/10.1002/pmic.201500396][10.1002/pmic.201500396]] |
+|---------------------------------------------------------------------------------+-------------------------------------------------------------------------------------+-----------+------+------------------------|
 
-
-** Interesting extensions
+** Interesting methodological extensions
 
 In the table below we present some interesting NMTF algorithmic extensions.
 
