--- a/resources/machine_learning/NMTF/README.org
+++ b/resources/machine_learning/NMTF/README.org
@@ -3,18 +3,18 @@
 
 ** Key references from an algorithmic perspective
 
-|---------------------------------------------------------------------------------------+-------------------------------------------------------------------------+------------------------------------+------+----------------------------|
-| Title                                                                                 | Relevance                                                               | Group                              | Year | DOI                        |
-|---------------------------------------------------------------------------------------+-------------------------------------------------------------------------+------------------------------------+------+----------------------------|
-| Learning the parts of objects by non-negative matrix factorization                    | 1. Introduces multiplicative update rules 2. relates NMF, PCA and VQ    | Daniel D. Lee & H. Sebastian Seung | 1998 | [[http://doi.org/10.1038/44565][10.1038/44565]]              |
-| Metagenes and molecular pattern discovery using matrix factorization                  | 1. Introduces the hard-clustering procedure                             | Jill P. Mesirov                    | 2004 | [[https://doi.org/10.1073/pnas.0308531101][10.1073/pnas.0308531101]]    |
-| On the equivalence of NMF and spectral clustering                                     | 1. Relates NMF, spectral clustering and kernel K-means                  | C. Ding                            | 2005 | [[https://doi.org/10.1137/1.9781611972757.70][10.1137/1.9781611972757.70]] |
-| Orthogonal nonnegative matrix t-factorizations for clustering                         | 1. Introduces NMTF                                                      | C. Ding                            | 2008 | [[https://doi.org/10.1145/1150402.1150420][10.1145/1150402.1150420]]    |
-| Simultaneous Clustering of Multi-Type Relational Data via Symmetric NMTF              | 1. Introduces NMTF heterogeneous fusion                                 | C. Ding                            | 2011 | [[https://doi.org/10.1145/2063576.2063621][10.1145/2063576.2063621]]    |
-| Graph Regularized NMF for Data Representation                                         | 1. Introduces NMF homogeneous fusion via graph regularisation           | Thomas S. Huang                    | 2011 | [[https://doi.org/10.1109/TPAMI.2010.231][10.1109/TPAMI.2010.231]]     |
-| Neural Word Embedding as Implicit Matrix Factorization                                | 1. State-of-the-art word embedding = PPMI + factorisation               | Omer Levy & Yoav Goldberg          | 2014 | [[https://dl.acm.org/doi/10.5555/2969033.2969070][10.5555/2969033.2969070]]    |
-| Network Embedding as Matrix Factorization: Unifying DeepWalk, LINE, PTE, and node2vec | 1. State-of-the-art node embedding = random walk + PPMI + factorisation | Jie B Tang                         | 2017 | [[https://doi.org/10.1145/3159652.3159706][10.1145/3159652.3159706]]    |
-|---------------------------------------------------------------------------------------+-------------------------------------------------------------------------+------------------------------------+------+----------------------------|
+|---------------------------------------------------------------------------------------+-----------------------------------------------------------------------------+------------------------------------+------+----------------------------|
+| Title                                                                                 | Relevance                                                                   | Group                              | Year | DOI                        |
+|---------------------------------------------------------------------------------------+-----------------------------------------------------------------------------+------------------------------------+------+----------------------------|
+| Learning the parts of objects by non-negative matrix factorization                    | 1. Introduces multiplicative update rules 2. relates NMF, PCA and VQ        | Daniel D. Lee & H. Sebastian Seung | 1998 | [[http://doi.org/10.1038/44565][10.1038/44565]]              |
+| Metagenes and molecular pattern discovery using matrix factorization                  | 1. Introduces the hard-clustering procedure                                 | Jill P. Mesirov                    | 2004 | [[https://doi.org/10.1073/pnas.0308531101][10.1073/pnas.0308531101]]    |
+| On the equivalence of NMF and spectral clustering                                     | 1. Relates NMF, spectral clustering and kernel K-means                      | C. Ding                            | 2005 | [[https://doi.org/10.1137/1.9781611972757.70][10.1137/1.9781611972757.70]] |
+| Orthogonal nonnegative matrix t-factorizations for clustering                         | 1. Introduces NMTF                                                          | C. Ding                            | 2008 | [[https://doi.org/10.1145/1150402.1150420][10.1145/1150402.1150420]]    |
+| Simultaneous Clustering of Multi-Type Relational Data via Symmetric NMTF              | 1. Introduces NMTF heterogeneous fusion                                     | C. Ding                            | 2011 | [[https://doi.org/10.1145/2063576.2063621][10.1145/2063576.2063621]]    |
+| Graph Regularized NMF for Data Representation                                         | 1. Introduces NMF homogeneous fusion via graph regularisation               | Thomas S. Huang                    | 2011 | [[https://doi.org/10.1109/TPAMI.2010.231][10.1109/TPAMI.2010.231]]     |
+| Neural Word Embedding as Implicit Matrix Factorization                                | 1. State-of-the-art word embedding = PPMI + factorisation                   | Omer Levy & Yoav Goldberg          | 2014 | [[https://dl.acm.org/doi/10.5555/2969033.2969070][10.5555/2969033.2969070]]    |
+| Network Embedding as Matrix Factorization: Unifying DeepWalk, LINE, PTE, and node2vec | 1. State-of-the-art node embedding = random walk-based PPMI + factorisation | Jie B Tang                         | 2017 | [[https://doi.org/10.1145/3159652.3159706][10.1145/3159652.3159706]]    |
+|---------------------------------------------------------------------------------------+-----------------------------------------------------------------------------+------------------------------------+------+----------------------------|
 
 ** Key references from an application's perspective
 
